--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-force-graph-2d": "1.29.0",
     "zod": "4.1.12"
   },
   "devDependencies": {
@@ -36,17 +37,21 @@
     "@commitlint/config-conventional": "20.0.0",
     "@eslint/js": "9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
+    "@tailwindcss/postcss": "4.1.17",
     "@types/node": "24.10.1",
     "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3",
+    "autoprefixer": "10.4.22",
     "eslint": "9.39.1",
     "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
+    "postcss": "8.5.6",
     "prettier": "3.6.2",
     "prettier-plugin-sort-json": "4.1.1",
+    "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
     "typescript-eslint": "8.46.4"
   },
