--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "0.13.8",
+    "@xyflow/react": "^12.3.4",
     "babel-plugin-react-compiler": "1.0.0",
+    "d3-force": "^3.0.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-force-graph-2d": "1.29.0",
     "zod": "4.1.12"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@eslint/js": "9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
     "@tailwindcss/postcss": "4.1.17",
+    "@types/d3-force": "^3.0.10",
     "@types/node": "24.10.1",
     "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3",
