--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 
 # testing
 /coverage
+htmlcov/
+.vitest-cache
 
 # next.js
 /.next/
@@ -42,3 +44,21 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+backend/venv/
+backend/.coverage
+.pytest_cache/
+*.egg-info/
+dist/
+build/
+
+# Python Virtual Environments
+venv/
+ENV/
+env/
