--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "format:ci": "prettier --list-different .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "postinstall": "husky"
   },
   "dependencies": {
@@ -39,15 +42,22 @@
     "@eslint/js": "9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
     "@tailwindcss/postcss": "4.1.17",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/d3-force": "^3.0.10",
+    "@vitejs/plugin-react": "^4.3.4",
     "@types/node": "24.10.1",
     "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.5",
     "autoprefixer": "10.4.22",
     "eslint": "9.39.1",
     "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
+    "happy-dom": "^20.0.10",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
     "postcss": "8.5.6",
@@ -55,7 +65,8 @@
     "prettier-plugin-sort-json": "4.1.1",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.4"
+    "typescript-eslint": "8.46.4",
+    "vitest": "^3.0.5"
   },
   "pnpm": {
     "overrides": {
