--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
       "@/public/*": ["./public/*"]
     }
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "coverage", "backend", ".next"],
   "include": [
     ".eslintrc.mjs",
     "next-env.d.ts",
